--- a/bluebronna/donate/index.html
+++ b/bluebronna/donate/index.html
@@ -29,21 +29,33 @@
         <div class="row">
             <div class="col-sm-6">
                 <h3 class="bb-darkblue font-weight-bold text-center">Monthly</h3>
-                <p>You can set up an account or use an existing paypal account to make monthly donations using many different payment methods including all major credit cards. You can also contact the office if you would like donate monthly through your bank. A form will be sent out to you to fill out and return to the camp. Funds will then be transferred into Blue Bronna’s account automatically each month.</p>
+                <h5 class="bb-darkblue font-weight-bold text-center">Online through Paypal</h5>
+                <p>You can set up an account or use an existing paypal account to make monthly donations using many different payment methods including all major credit cards. Funds will then be transferred into Blue Bronna’s account automatically each month.</p>
                 <div class="col-sm-12 text-center">
                     <input class="btn btn-outline-secondary mr-2 btn-white-navy" type="submit" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"  value="Monthly Donation (Paypal)" />
                 </div>
-                <div class="col-sm-12 text-center">
+                <div class="col-sm-12 text-center pl-0">
                     <img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark">
                     <img alt="" border="0" src="https://www.paypal.com/en_CA/i/scr/pixel.gif" width="1" height="1" />
                 </div>
+                <h5 class="bb-darkblue font-weight-bold text-center">Through your Bank</h5>
+                <p>You can also <a href="../about/contact-us.html">contact the office</a> if you would like to donate monthly through your bank. A form will
+                    be sent out to you to fill out and return to the camp. Funds will then be transferred into Blue
+                    Bronna’s account automatically each month.</p>
             </div>
             <div class="col-sm-6">
                 <h3 class="bb-darkblue font-weight-bold text-center">One-time</h3>
-                <p>You can donate through ATBCares using any major credit card. You can also send an e-transfer to office@bluebronna.org. For both of these, please include your address and email so that we can send you a donation receipt (e-transfers) or a thank you note (ATB Cares). You can also call the office to give a donation with a credit card or mail a cheque to the address below.</p>
-                <div class="col-sm-12 text-center">
+                <h5 class="bb-darkblue font-weight-bold text-center">Online through ATBCares</h5>
+                <p>You can donate through ATBCares using any major credit card. Please include your address and email so that we can send a thank you note.</p>
+                <div class="col-sm-12 text-center mb-2">
                     <a class="btn btn-outline-secondary mr-2 btn-white-navy text" target="_blank" href="https://atbcares.benevity.org/community/cause/124-100549989RR0001">One-time Donation (ATBCares)</a>
                 </div>
+                <h5 class="bb-darkblue font-weight-bold text-center">E-Transfer</h5>
+                <p>You can also send an e-transfer to office@bluebronna.org. Please include your address and email so that we can send you a donation receipt or a thank you note.</p>
+                <h5 class="bb-darkblue font-weight-bold text-center">Credit Card</h5>
+                <p>Call the office to give a donation with a credit card.</p>
+                <h5 class="bb-darkblue font-weight-bold text-center">Cheque via Mail</h5>
+                <p>Mail a cheque to Box 65, Longview, AB T0L 1HO</p>
             </div>
         </div>
     </form>
