--- a/bluebronna/events/ride-a-thon/index.html
+++ b/bluebronna/events/ride-a-thon/index.html
@@ -71,7 +71,7 @@
 </div>
 <script>
     var THIS_NAV = "events";
-    var ROOT_PATH = "..";
+    var ROOT_PATH = "../..";
     var STATIC_PATH = ROOT_PATH + "/static/";
 </script>
 <script src="../../static/js/base.js"></script>
