--- a/bluebronna/register/index.html
+++ b/bluebronna/register/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="container mt-5 pb-5">
     <div class="col-sm-6 offset-sm-3">
-        <p>We are excited that you interested in attending our summer camp is 2020. The registration form is now available for 2020. We look forward to see you this summer.</p>
+        <p>We are excited that you are interested in attending our summer camp in <span class="upcoming-year"></span>. The registration form is now available for <span class="upcoming-year"></span>. We look forward to see you this summer.</p>
         <p>Brent Ankrom<br><i>Camp Director</i></p>
 
         <div class="col-sm-12 text-center">
