--- a/bluebronna/staff/index.html
+++ b/bluebronna/staff/index.html
@@ -28,6 +28,7 @@
     <p class="ss"><a target="_blank" href="../static/files/2020%20BBWC%20Camp%20Staff%20Information.pdf">Download the 2020 Staff Information Package</a></p>
     <p class="ss"><a target="_blank" href="https://bluebronna.wufoo.com/forms/2020-blue-bronna-wilderness-camp-staff-application">2020 New Staff Online Application Link</a></p>
     <p class="ss"><a target="_blank" href="https://bluebronna.wufoo.com/forms/m1nkhi5d0qe1n80/">2020 Returning Staff Online Application Link</a></p>
+    <p class="ss"><a target="_blank" href="https://bluebronna.wufoo.com/forms/m1nkhi5d0qe1n80/">2020 Jr Staff Online Application link</a></p>
     <p>For more info, email <a href="mailto:Office@BlueBronna.org">office@bluebronna.org</a></p>
 
     <div class="row">
