--- a/bluebronna/upcoming-adventures/youth-10-12.html
+++ b/bluebronna/upcoming-adventures/youth-10-12.html
@@ -18,14 +18,14 @@
         <div class="upper-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Youth Adventure Camp:</p>
+                    <p class="text-white font-weight-bold"><span class="name"></span></p>
                 </div>
             </div>
         </div>
         <div class="lower-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Ages 10 to 12 - July 14th to 19th, 2020</p>
+                    <p class="camp-dates text-white font-weight-bold"><span class="start-date"></span> to <span class="end-date"></span>, <span class="year"></span></p>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="font-weight-bold bb-gray">Youth Adventure Camp</h1>
+            <h1 class="font-weight-bold bb-gray"><span class="name"></span></h1>
             <p>This camp is designed to motivate this group of maturing pre-teens through trial and thrill. With activities planned for an active and developing age group, your children will experience adventure and challenge in a safe and engaging approach. Led by program facilitators that are certified in wilderness first aid, your child will be guided in developing leadership and outdoor skills.</p>
             <p>You can expect your children to build relationships, and to start building competence in the outdoors and leadership through activities such as:</p>
             <ul>
@@ -50,10 +50,10 @@
                 <li class="bulletless"><i class="fas fa-check-circle"></i> Bible Devotions</li>
             </ul>
             <p>This camp is located at our Coat Creek site on the edge of the Livingstone river. This remote site has enough amenities to be comfortable, however, we leave the luxuries behind. They will learn age relevant teaching from the bible around the campfire in the evenings and be challenged in God's Creation during the day. With staff to camper ratios of 6:1 our staff will guide your pre-teens through a challenging and thrilling journey.</p>
-            <p><strong>Arrival: </strong> 2pm Tuesday</p>
-            <p><strong>Departure: </strong> 2pm Sunday</p>
-            <p><strong>Cost: </strong> $400 - with $75 off for a first time friend</p>
-            <a class="btn btn-outline-dark btn-white-navy" href="https://bluebronna.wufoo.com/forms/2020-summer-camp-registration" target="_blank">Register</a>
+            <p><strong>Start Time: </strong> <span class="start-time"></span></p>
+            <p><strong>End Time: </strong> <span class="end-time"></span></p>
+            <p><strong>Cost: </strong> <span class="cost"></span></p>
+            <a class="btn btn-outline-dark btn-white-navy registration-link" href="#" target="_blank">Register</a>
             <div id="imageGallery" class="pt-5">
                 <div class="row">
                     <div class="col-md-6 text-center">
@@ -81,5 +81,8 @@
     var STATIC_PATH = ROOT_PATH + "/static/";
 </script>
 <script src="../static/js/base.js"></script>
+<script>
+    getCampDetails("youth1012");
+</script>
 </body>
 </html>
