--- a/bluebronna/index.html
+++ b/bluebronna/index.html
@@ -40,7 +40,7 @@
                                 <a class="dropdown-item" href="./about/contact-us.html">Contact Us</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="./volunteer/index.html">Staff Opportunities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="staff/index.html">Staff Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="./needs/">Needs</a></li>
                         <li class="nav-item"><a class="nav-link" href="./donate/">Donate</a></li>
                         <li class="nav-item"><a class="nav-link" href="./register/">Register</a></li>
@@ -256,7 +256,7 @@
                             <h3 class="text-white font-weight-bold">Staff Opportunities</h3>
                             <hr class="involved-hr">
                             <p class="text-white">Join our team</p>
-                            <a class="btn btn-outline-secondary btn-white-navy-outline" href="./volunteer/">See Openings</a>
+                            <a class="btn btn-outline-secondary btn-white-navy-outline" href="staff/">See Openings</a>
                         </div>
                         <div class="col-md-4 text-center mb-32">
                             <h3 class="text-white font-weight-bold">Needs</h3>
