--- a/bluebronna/upcoming-adventures/father-daughter-horse-camp.html
+++ b/bluebronna/upcoming-adventures/father-daughter-horse-camp.html
@@ -18,14 +18,14 @@
         <div class="upper-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Father/Daughter Horse Camp</p>
+                    <p class="text-white font-weight-bold"><span class="name"></span></p>
                 </div>
             </div>
         </div>
         <div class="lower-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">July 23rd to 26th, 2020</p>
+                    <p class="camp-dates text-white font-weight-bold"><span class="start-date"></span> to <span class="end-date"></span>, <span class="year"></span></p>
                 </div>
             </div>
         </div>
@@ -34,7 +34,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="font-weight-bold bb-gray">Father/Daughter Horse Camp</h1>
+            <h1 class="font-weight-bold bb-gray"><span class="name"></span></h1>
             <p>Blue Bronna is all about creating an environment where dads and daughters spend time together and are encouraged in their relationship with each other and with God.</p>
             <p>Something special happens when you spend time with your daughter at Blue Bronna.</p>
             <p>You laugh. You play. You connect. You create memories only you can share.</p>
@@ -53,12 +53,14 @@
             </ul>
             <p>All meals, snacks, and accommodations are included in the camp fee. The food sure tastes cooked in cast iron over an open fire.</p>
             <p>Open to ages 14 to 88!</p>
-            <p><strong>Start Time: </strong> 2pm Thursday</p>
-            <p><strong>Departure: </strong> 2pm Sunday</p>
-            <p><strong>Cost: </strong> $250 for the adult, $200 for each daughter, Family max is $600.</p>
-            <p class="font-weight-bold">Family Discount for second person in the family coming to the Father Daughter Horse Camp does not apply.</p>
-            <p class="font-weight-bold">$75 discount for a person who is invited by you and registers who has never been to Blue Bronna before does apply.</p>
-            <a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2020-summer-camp-registration">Register</a>
+            <p><strong>Start Time: </strong> <span class="start-time"></span></p>
+            <p><strong>End Time: </strong> <span class="end-time"></span></p>
+            <p><strong>Cost: </strong> <span class="cost"></span></p>
+
+            <div class="additional-conditions">
+            </div>
+
+            <a class="btn btn-outline-dark btn-white-navy registration-link" href="#" target="_blank">Register</a>
             <div id="imageGallery" class="pt-5">
                 <div class="row">
                     <div class="col-md-4 text-center">
@@ -84,5 +86,8 @@
     var STATIC_PATH = ROOT_PATH + "/static/";
 </script>
 <script src="../static/js/base.js"></script>
+<script>
+    getCampDetails('fatherdaughterhorsecamp')
+</script>
 </body>
 </html>
