--- a/bluebronna/upcoming-adventures/father-son-adventure-camp.html
+++ b/bluebronna/upcoming-adventures/father-son-adventure-camp.html
@@ -18,20 +18,20 @@
         <div class="upper-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">Father/Son Adventure Camp</p>
+                    <p class="text-white font-weight-bold"><span class="name"></span></p>
                 </div>
             </div>
         </div>
         <div class="lower-caption pb-5 pt-5">
             <div class="row">
                 <div class="col-md-3 offset-md-3 caption-text pt-3">
-                    <p class="text-white font-weight-bold">July 8th to July 11th, 2020</p>
+                    <p class="camp-dates text-white font-weight-bold"><span class="start-date"></span> to <span class="end-date"></span>, <span class="year"></span></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container pb-5">
     <p>Blue Bronna is all about creating an environment where dads and sons spend time together and are encouraged in their relationship with each other and with God.</p>
     <p>This is a great opportunity to re-connect or connect deeper with your son and spend time “Away from the Noise” to focus on the important things in life.  Join us and invest in a fun weekend, and receive an abundant return on that investment.</p>
     <p>However. Before you race to grab your hiking gear. Keep in mind this is not deluxe housing…it’s rustic, but you and your son will love it. This camp is located at our Coat Creek site on the edge of the Livingstone river. This remote site has enough amenities to be comfortable, however, we leave the luxuries behind. Campers sleep in canvas tents with a wood stove for heat and most of the food is cooked over the fire. We’ll provide the nutrients, nesting place and neutron-packed program for a weekend you won’t forget.</p>
@@ -50,12 +50,14 @@
     <p>Any combination of men and guys are welcome; it’s not just for fathers and sons. Sons bring your dad, grandfather, or uncle and spend some quality time together!</p>
     <p>Open to ages 13 to 88!</p>
     <p>All meals, snacks, and accommodations are included in the camp fee. The food sure tastes cooked in cast iron over an open fire.</p>
-    <p><strong>Start Time: </strong>2pm Wednesday</p>
-    <p><strong>End Time: </strong>2pm Saturday</p>
-    <p><strong>Cost:</strong>$250 for the adult, $200 for each son, Family max is $600</p>
-    <p><strong>Family Discount for second person in the family coming to the Father Son does not apply. It does apply to others in your family who attend a different program that we offer.</strong></p>
-    <p><strong>$75 discount for a person who is invited by you and registers who has never been to Blue Bronna before does apply. This discount applies to them coming to any camp that we run.</strong></p>
-    <a class="btn btn-outline-secondary mr-2 btn-white-navy" href="https://bluebronna.wufoo.com/forms/2020-summer-camp-registration">Register</a>
+    <p><strong>Start Time: </strong> <span class="start-time"></span></p>
+    <p><strong>End Time: </strong> <span class="end-time"></span></p>
+    <p><strong>Cost: </strong> <span class="cost"></span></p>
+
+    <div class="additional-conditions">
+    </div>
+
+    <a class="btn btn-outline-dark btn-white-navy registration-link" href="#" target="_blank">Register</a>
 </div>
 <div id="footer" class="container-fluid">
 </div>
@@ -65,5 +67,8 @@
     var STATIC_PATH = ROOT_PATH + "/static/";
 </script>
 <script src="../static/js/base.js"></script>
+<script>
+    getCampDetails('fathersonadventurecamp');
+</script>
 </body>
 </html>
