--- a/silverspecs/patient-information/contact-lens-fitting.html
+++ b/silverspecs/patient-information/contact-lens-fitting.html
@@ -4,41 +4,45 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT LENS FITTING | DMC Optometry</title>
+    <title>Silver Specs</title>
     <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
     <script src="../static/js/jquery-3.4.0.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
     <link href="../static/css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light">
-    <a class="navbar-brand" href="../index.html">DMC Optometry</a>
+<nav class="navbar fixed-top navbar-light bg-light navbar-expand-lg">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="../contact/index.html">Contact</a></li>
+        <ul class="navbar-nav mx-auto noselect">
+            <a class="navbar-brand" href="../index.html">Silver Specs</a>
+            <li class="nav-item"><a class="nav-link" href="#TODOBOOKLINK">Book Appointment</a></li>
+            <li class="my-auto text-center divider"> | </li>
+            <li class="nav-item"><a class="nav-link" href="../services">Services</a></li>
+            <li class="my-auto text-center divider"> | </li>
+            <li class="nav-item"><a class="nav-link" href="../index.html#about">About Us</a></li>
+            <li class="my-auto text-center divider"> | </li>
+            <li class="nav-item"><a class="nav-link" href="../location">Location</a></li>
+            <li class="my-auto text-center divider"> | </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="patientInfoDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Patient Information
                 </a>
                 <div class="dropdown-menu" aria-labelledby="patientInfoDropdown">
-                    <a class="dropdown-item" href="../patient-information/guarantee.html">Guarantee</a>
-                    <a class="dropdown-item active" href="../patient-information/contact-lens-fitting.html">Contact Lens Fitting</a>
-                    <a class="dropdown-item" href="../patient-information/faq.html">Frequently Asked Questions</a>
+                    <a class="dropdown-item" href="../index.html#guarantee">Guarantee</a>
+                    <a class="dropdown-item" href="../patient-information/contact-lens-fitting.html">Contact Lens Fitting</a>
+                    <a class="dropdown-item" href="../index.html#faq">Frequently Asked Questions</a>
                 </div>
             </li>
-            <li class="nav-item"><a class="nav-link" href="../careers/index.html">Careers</a></li>
         </ul>
     </div>
 </nav>
 <div id="fitting" class="container p-5">
     <div class="row">
         <div class="col-md-12">
-            <h2 class="border-blue">Why Do I Need a Contact Lens Fitting?</h2>
+            <h3 class="card-title">Why Do I Need a Contact Lens Fitting?</h3>
             <p>
                 Contact lenses are medical devices and require a prescription that may be slightly different from a glasses prescription. For optimal health, a corneal health and contact lens evaluation should be performed before you update or renew your contact lenses, or annually, whichever comes first.
             </p>
@@ -49,11 +53,11 @@
     </div>
     <div class="row mb-3">
         <div class="col-md-6">
-            <h2 class="border-blue">Contact Lens Fit Process</h2>
+            <h3 class="card-title">Contact Lens Fit Process</h3>
             <h5>Step 1 | The eye exam and glasses prescription</h5>
             <p>Your eye health and function is evaluated during the eye exam to make sure you are suitable for contact lens wear. The glasses prescription is usually released to you, the patient, at this stage. The glasses prescription is then used as a starting point for the contact lenses.</p>
             <p>We then use measurements, already obtained during the exam, to ensure the contact lenses will fit your specific needs such as curvature and size.</p>
-         </div>
+        </div>
         <div class="col-md-6">
             <img class="img-fluid" src="../static/img/contact-lens-fitting-1.jpg"/>
         </div>
@@ -73,7 +77,7 @@
             <img class="img-fluid" src="../static/img/contact-lens-fitting-2.jpg"/>
         </div>
         <div class="col-md-6">
-            <h2 class="border-blue">Some Final Notes and Disclosures</h2>
+            <h3 class="card-title">Some Final Notes and Disclosures</h3>
             <p>Thank you again for choosing us for your contact lens needs. Your contact lens fee covers any subsequent contact lens related follow-ups. As a reminder for your upcoming contact lens recheck please ensure you:</p>
             <ol>
                 <li>Wear the contact lens as provided to the appointment. If you have been given more than 1 pair, please wear the pair you preferred the most.</li>
@@ -84,58 +88,22 @@
         </div>
     </div>
 </div>
-<div id="scheduleBlock" class="container-fluid">
-    <div class="row">
-        <div class="col-md-8 text-center">
-            <h3>Schedule&nbsp;An&nbsp;Appointment</h3>
-            <p class="small">Using our external booking site with Optiks International</p>
-        </div>
-        <div class="col-md-4 my-auto text-center">
-            <a target="_blank" href="http://factoryoptical.ca/homepage/book-an-eye-exam-2/" class="btn btn-lg"><i class="far fa-calendar-alt mr-1"></i> Book Now</a>
-        </div>
-    </div>
-</div>
-<div class="float-parent">
-    <div id="scheduleMobileBlock" class="sticky-bottom container-fluid">
-        <div class="row">
-            <div class="col-md-8 text-center">
-                <h5>Schedule an Appointment</h5>
-                <p class="small">Using our external booking site with Optiks International</p>
-            </div>
-            <div class="col-md-4 my-auto text-center">
-                <button class="btn">Book Now</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="footer" class="container-fluid">
+<div id="footer" class="container-fluid pt-2">
     <div class="row col-md-12">
         <div class="col-md-4 mb-2">
-            <h3 class="font-weight-bold">DMC Optometry</h3>
-            <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
-            <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
-                <i class="fab fa-facebook-f"></i>
-            </a>
+            <h3 class="font-weight-bold">Silver Specs</h3>
+            <p>A blurb about the things about Silver Specs</p>
         </div>
         <div class="col-md-4 mx-auto mb-3">
-            <h5 class="font-weight-bold">CONTACT INFORMATION</h5>
+            <h5 class="font-weight-bold">Contact Information</h5>
             <div id="contactBlock" class="mb-2">
-                <p><i class="fas fa-globe"></i> #1, 405 Highlands Blvd West</p>
-                <p class="pl-4">Lethbridge, AB T1J 5E8</p>
-                <p class="pl-4">(Inside Optiks International)</p>
-            </div>
-            <div>
-                <p>
-                    <a class="phone-us" href="tel:403-381-1198"><i class="fas fa-phone"></i> 403-381-1198</a>
-                </p>
-            </div>
-            <div>
-                <p>Call and schedule an appointment today!</p>
+                <p><i class="fas fa-globe"></i> #2-1814 20 Ave</p>
+                <p class="pl-4">Coaldale, AB</p>
             </div>
         </div>
         <div class="col-md-4">
             <h5 class="font-weight-bold">
-                CLINIC HOURS
+                Clinic Hours
             </h5>
             <table class="table">
                 <tbody>
@@ -152,7 +120,7 @@
                         Tuesday
                     </td>
                     <td>
-                        9:00am - 6:00pm
+                        9:00am - 5:30pm
                     </td>
                 </tr>
                 <tr>
@@ -160,7 +128,7 @@
                         Wednesday
                     </td>
                     <td>
-                        9:00am - 6:00pm
+                        9:00am - 5:30pm
                     </td>
                 </tr>
                 <tr>
@@ -168,7 +136,7 @@
                         Thursday
                     </td>
                     <td>
-                        11:00am - 7:00pm
+                        11:00am - 7:30pm
                     </td>
                 </tr>
                 <tr>
@@ -176,7 +144,7 @@
                         Friday
                     </td>
                     <td>
-                        9:00am - 6:00pm
+                        9:00am - 5:30pm
                     </td>
                 </tr>
                 <tr>
@@ -184,7 +152,7 @@
                         Saturday
                     </td>
                     <td>
-                        9:00am - 3:00pm
+                        9:00am - 1:00pm
                     </td>
                 </tr>
                 <tr>
@@ -197,9 +165,10 @@
                 </tr>
                 </tbody>
             </table>
+            * Closed on Holidays
         </div>
     </div>
-    <div class="footer-copyright text-center py-3 small">© 2019 by DM Cuevas Professional Optometry Corporation. Created by <a target="_blank" href="http://www.czmoody.com">Curtis Zim Moody</a>.
+    <div class="footer-copyright text-center py-3 small">© 2020 by DM Cuevas Professional Optometry Corporation. Created by <a target="_blank" href="http://www.czmoody.com">CZMoody</a>.
     </div>
 </div>
 <script src="../static/js/base.js"></script>
