--- a/silverspecsnew/about-optical/services/index.html
+++ b/silverspecsnew/about-optical/services/index.html
@@ -12,24 +12,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav id="navigation" class="navbar navbar-expand-lg navbar-light pb-5"></nav>
+<nav id="navigation" class="navbar navbar-expand-lg navbar-light pb-5"></nav>
 
-    <div class="container text-center pb-5">
-        <h1 class="pb-4">OPTICAL SERVICES</h1>
-    </div>
-    <div class="container pb-5">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="row">
-                    <img class="services img-fluid mb-5" src="../../static/img/about-optical-shop.png" />
+<div class="container text-center pb-5">
+    <h1 class="pb-4">OPTICAL SERVICES</h1>
+</div>
+<div class="container pb-5">
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="row">
+                <img class="services img-fluid mb-5" src="../../static/img/about-optical-shop.png" />
+                <div>
                     <h3 class="mb-3">PERSONALIZED SHOPPING</h3>
                     <h5 class="mb-3">Spectacles unique to you.</h5>
                     <p class="mb-3">Frames have come a long way. From colours to materials, to designs and sizes. To help you narrow down the selection to a frame just for you, we made the shopping experience tailored to what you have in mind. Just ask our staff for help.</p>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <div class="row">
-                    <img class="services img-fluid mb-5" src="../../static/img/about-optical-frame.png" />
+        </div>
+        <div class="col-lg-6">
+            <div class="row">
+                <img class="services img-fluid mb-5" src="../../static/img/about-optical-frame.png" />
+                <div>
                     <h3 class="mb-3">REPAIRS, ADJUSTMENTS, AND TROUBLESHOOTS</h3>
                     <h5 class="mb-3">Taking Care of You</h5>
                     <p class="mb-3">Life happens and sometimes your glasses need some help. Give us a call for complimentary cleaning, repairs, and adjustments - even if you didn't purchase your glasses from us.</p>
@@ -38,13 +41,14 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div id="footer" class="container-fluid"></div>
-    <script>
-        var THIS_NAV = "about-optical-services";
-        var ROOT_PATH = "../..";
-        var STATIC_PATH = "../../static/";
-    </script>
-    <script src="../../static/js/base.js"></script>
+<div id="footer" class="container-fluid"></div>
+<script>
+    var THIS_NAV = "about-optical-services";
+    var ROOT_PATH = "../..";
+    var STATIC_PATH = "../../static/";
+</script>
+<script src="../../static/js/base.js"></script>
 </body>
 </html>
